--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-snowpack-app"
-    />
+    <link rel="stylesheet" href="/index.css" />
     <title>hubook</title>
   </head>
   <body>
     <div id="root"></div>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="%PUBLIC_URL%_dist_/index.js"></script>
+    <script src="/index.js"></script>
+    <script src="http://localhost:35729/livereload.js?snipver=1"></script>
   </body>
 </html>
